Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1056

For a request with an un-supported HTTP Method Axis2/C server side replies with 202 Accepted, instead of 501 Not Implemented

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • None
    • transport/http
    • None

    Description

      For a request with an un-supported HTTP Method Axis2/C server side replies with 202 Accepted, instead of 501 Not Implemented

      Attachments

        Activity

          People

            senakafdo Senaka Fernando
            senakafdo Senaka Fernando
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: