Fixing a memory leak in http_worker, adding a method to report an appropriate message along with a 500 Error, fixing JIRA Issue AXIS2C-1056, and using the more appropriate 501 Not Implemented status instead of 400 Bad Request